2008-01-01  Nicolas François  <nicolas.francois@centraliens.net>

	* src/grpck.c: Split process_flags(), open_files(), and
	close_files() out of main(). New global variables is_shadow,
	sort_mode, use_system_grp_file, and use_system_sgr_file.
	* src/grpck.c: Split check_grp_file() and check_sgr_file() out of
	main().

2007-12-31  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/Makefile.in.in: If remove-potcdate.sin does not exist,
	use the one from teh po directory (it is not installed
	automatically by autopoint.

2007-12-31  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.h: Fix the type of the bitfields in the commonio_entry
	and commonio_db structures to unsigned int (instead of int).

2007-12-31  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chsh.c: Split process_flags(), check_perms(), and update_shell()
	out of main().
	* src/chsh.c: Before pam_end(), the return value of the previous
	pam API was already checked. No need to validate it again.
	* src/chsh.c: Avoid implicit brackets.
	* src/chsh.c: Avoid assignments in comparisons.

2007-12-31  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chfn.c: New function: process_flags() split out of main().
	The flags variables are now global.
	* src/chfn.c: New functions: check_perms(), update_gecos(),
	get_old_fields(), and check_fields() split out of main().
	* src/chfn.c: Before pam_end(), the return value of the previous
	pam API was already checked. No need to validate it again.
	* src/chfn.c: Avoid implicit brackets.
	* src/chfn.c: Document may_change_field().
	* src/chfn.c: Avoid implicit conversions to booleans.
	* src/chfn.c: Avoid assignments in comparisons.

2007-12-31  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newusers.c: Compilation fix for PAM support (pamh needs to be
	global since the function split).
	* src/chpasswd.c: Likewise.
	* src/chgpasswd.c: Likewise.
	* src/chpasswd.c: Avoid implicit conversions to booleans.
